runners/services: Fix refreshing the services list

After bccf4ac7f015d02f216a95a44b1b92b950e9a7fa the
KSycoca::databaseChanged signal is not connected with
Qt::DirectConnection anymore as the comment here suggested,
so we were always disabling the refresh.

BUG: 479513